# ai_support_system

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  init_base_data.py  init_db.py  install-dev.sh  install.sh  main.py  prometheus.yml  pyproject.toml  requirements-dev.txt  requirements.txt
base_data/: faq_documents_list.json
base_data/faq_documents/: 01_what_is_shakers.md  02_payment_system.md  03_freelancer_guide.md  04_client_guide.md  05_project_management.md  06_dispute_resolution.md  07_platform_fees.md  08_security_measures.md  09_skill_verification.md  10_success_tips.md  11_freelancer_profiles.md  12_project_workflows.md  13_industry_guides.md  14_success_stories.md  15_technical_tutorials.md  16_general_guidelines.md  17_billing_guide.md  18_account_management.md  19_support_resources.md  20_best_practices_guide.md  project.txt
documentation/: api_documentation.md  api_endpoints.md  architecture.md  database_automation.md  database_documentation.md  database_setup.md  design_patterns.md  docker_setup.md  endpoints_and_setup.md  installation_steps.md  metrics.md  next_steps.md  prompt_management.md  setup_and_configuration.md  technologies.md  testing.md
documentation/roadmap/: architecture_evolution.md  database_evolution.md  ml_pipeline.md  performance_optimization.md  security_enhancements.md
src/: ai_response_router.py
src/application/: ai_support_manager.py  ai_support_manager_test.py  dump_data_manager.py  dump_data_manager_test.py
src/application/interfaces/: ai_generation_interface.py  ai_interface.py  ai_support_interface.py  dump_data_interface.py
src/config/: settings.py
src/database/: connection.py  init_db_schemas.py  run_init_db.py  updates_store.py
src/database/config/: pg_hba.conf  settings.py
src/database/db_schemas/: init_faq_documents.sql  init_user.sql  init_user_response.sql
src/dependencies/: fastapi_depends.py
src/infrastructure/: ai_generation_repository.py  ai_generation_repository_test.py  ai_repository.py  ai_support_repository.py  ai_support_repository_test.py  dump_data_repository.py  prometheus_metrics.py
src/scripts/: init_base_data.py
src/types/: documents.py  embeddings.py  recommendations.py  requests.py  support.py  user.py
